WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140094
Using calc() in repeat() for -webkit-grid-template-rows does not work
https://bugs.webkit.org/show_bug.cgi?id=140094
Summary
Using calc() in repeat() for -webkit-grid-template-rows does not work
Chris Dumez
Reported
2015-01-05 13:34:03 PST
Using calc() in repeat() for -webkit-grid-template-rows does not work because the CSS parser does not handle this case properly.
Attachments
Patch
(8.56 KB, patch)
2015-01-05 13:56 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-mountainlion-wk2
(570.14 KB, application/zip)
2015-01-05 14:15 PST
,
Build Bot
no flags
Details
Patch
(6.47 KB, patch)
2015-01-05 14:24 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-01-05 13:56:20 PST
Created
attachment 244001
[details]
Patch
Build Bot
Comment 2
2015-01-05 14:15:41 PST
Comment on
attachment 244001
[details]
Patch
Attachment 244001
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6687861441036288
New failing tests: fast/multicol/zeroColumnCount.html
Build Bot
Comment 3
2015-01-05 14:15:45 PST
Created
attachment 244004
[details]
Archive of layout-test-results from ews105 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Chris Dumez
Comment 4
2015-01-05 14:24:33 PST
Created
attachment 244005
[details]
Patch
WebKit Commit Bot
Comment 5
2015-01-05 20:48:31 PST
Comment on
attachment 244005
[details]
Patch Clearing flags on attachment: 244005 Committed
r177947
: <
http://trac.webkit.org/changeset/177947
>
WebKit Commit Bot
Comment 6
2015-01-05 20:48:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug